hamburger menu navbar (FIXME <360px alignment)

--- a/portfoliowebsite/src/Components/Navbar/Navbar.css
+++ b/portfoliowebsite/src/Components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
 }
 .primary-nav {
   padding-right: 50px;
-  margin-top: 10px;
+  margin-top: 13px;
 }
 .primary-nav li {
   display: inline-block;
@@ -33,4 +33,37 @@
   text-decoration: none;
   color: white;
   border-bottom: 2px solid #f5f5f5;
+}
+
+.toggleMenu {
+  cursor: pointer;
+  display: none;
+}
+
+@media (max-width: 460px) {
+  .toggleMenu {
+    display: inline-block;
+  }
+  .slide {
+    transform: translateX(200%);
+    transition: all 300ms ease-in;
+  }
+  .noslide {
+    transform: translateX(100%);
+    transition: all 300ms ease-in;
+  }
+  .primary-nav .ul {
+    z-index: -1;
+    background-color: rgba(20, 20, 20, 0.5);
+    width: 60%;
+    height: 100vh;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all 300ms ease-in;
+  }
+  .primary-nav li {
+    margin: 10px 0;
+  }
 }
